# magnum-integration

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  CREDITS.md  PKGBUILD  README.md
doc/: building-integration.dox  changelog-integration-old.dox  changelog-integration.dox  cmake-integration.dox  credits.dox  custom-buildsystems-integration-order.dot  custom-buildsystems-integration.dox  namespaces.dox
doc/snippets/: BulletIntegration.cpp  CMakeLists.txt  DartIntegration.cpp  EigenIntegration.cpp  GlmIntegration.cpp  ImGuiIntegration-sdl2.cpp  ImGuiIntegration.cpp  OvrIntegration.cpp  YogaIntegration.cpp  dartintegration.cpp  yogaintegration-debuglayer.ansi
modules/: CMakeLists.txt  FindAssimp.cmake  FindBullet.cmake  FindCorrade.cmake  FindGLM.cmake  FindImGui.cmake  FindMagnum.cmake  FindMagnumIntegration.cmake  FindMagnumPlugins.cmake  FindOVR.cmake  FindOpenGLES2.cmake  FindOpenGLES3.cmake  MagnumIntegrationConfig.cmake
package/: sync-modules.sh
package/archlinux/: PKGBUILD  PKGBUILD-coverage  PKGBUILD-emscripten  PKGBUILD-emscripten-wasm  PKGBUILD-emscripten-wasm-webgl2  PKGBUILD-release
package/archlinux/magnum-integration-git/: .gitignore  PKGBUILD
package/ci/: android-x86-gles.sh  appveyor-desktop-gles.bat  appveyor-desktop-mingw.bat  appveyor-desktop.bat  appveyor-lcov.sh  appveyor-rt.bat  appveyor.yml  circleci.yml  emscripten.sh  ios-simulator-gles.sh  jenkins-emscripten.xml  jenkins-mingw-w64.xml  jenkins-nacl.xml  jenkins.xml  leaksanitizer.conf  make_minimal_ovr_sdk.py  travis-android-arm.sh  travis-dependencies.sh  travis-desktop-gles.sh  travis-desktop.sh  travis-emscripten.sh  travis-ios-simulator.sh  travis.yml  unix-desktop-gles.sh  unix-desktop.sh
package/debian/: .gitignore  changelog  control  copyright  magnum-integration-dev.install  magnum-integration.install  rules
package/gentoo/dev-libs/magnum-integration/: Manifest  magnum-integration-9999.ebuild
package/homebrew/: magnum-integration.rb
package/msys/: .gitattributes  PKGBUILD
package/msys/magnum-integration/: PKGBUILD
package/rpm/: build.sh  magnum-integration.spec
src/: CMakeLists.txt
src/BulletIntegration/: CMakeLists.txt  ConvertShape.cpp  ConvertShape.h  Integration.h  MotionState.cpp  MotionState.h  magnumBulletIntegrationVisibility.h
src/BulletIntegration/Test/: CMakeLists.txt  ConvertShapeTest.cpp  IntegrationTest.cpp
src/Magnum/: CMakeLists.txt  versionIntegration.h.cmake
src/Magnum/BulletIntegration/: CMakeLists.txt  ConvertShape.cpp  ConvertShape.h  DebugDraw.cpp  DebugDraw.h  Integration.h  MotionState.cpp  MotionState.h  configure.h.cmake  magnumBulletIntegrationVisibility.h  visibility.h
src/Magnum/BulletIntegration/Test/: CMakeLists.txt  ConvertShapeTest.cpp  DebugDrawTest.cpp  IntegrationTest.cpp  MotionStateTest.cpp
src/Magnum/DartIntegration/: CMakeLists.txt  ConvertShapeNode.cpp  ConvertShapeNode.h  DartIntegration.h  DartObject.cpp  DartObject.h  DartSkeleton.cpp  DartSkeleton.h  Object.cpp  Object.h  World.cpp  World.h  configure.h.cmake  visibility.h
src/Magnum/DartIntegration/Test/: CMakeLists.txt  ConvertShapeNodeTest.cpp  DartSkeletonTest.cpp  WorldGLTest.cpp  common.h  configure.h.cmake
src/Magnum/DartIntegration/Test/urdf/: test_multi_mesh.urdf  test_texture.urdf  texture.dae
src/Magnum/EigenIntegration/: CMakeLists.txt  DynamicMatrixIntegration.h  GeometryIntegration.h  Integration.h
src/Magnum/EigenIntegration/Test/: CMakeLists.txt  DynamicMatrixIntegrationTest.cpp  GeometryIntegrationTest.cpp  IntegrationTest.cpp
src/Magnum/GlmIntegration/: CMakeLists.txt  GtcIntegration.h  GtxIntegration.h  Integration.cpp  Integration.h  configure.h.cmake  visibility.h
src/Magnum/GlmIntegration/Test/: CMakeLists.txt  GtcIntegrationTest.cpp  GtxIntegrationTest.cpp  IntegrationTest.cpp
src/Magnum/ImGuiIntegration/: CMakeLists.txt  Context.cpp  Context.h  Context.hpp  Conversion.h  ImGui.frag  ImGui.vert  Integration.cpp  Integration.h  Integration.hpp  MagnumImGui.cpp  MagnumImGui.h  Widgets.h  configure.h.cmake  visibility.h
src/Magnum/ImGuiIntegration/Test/: AndroidApplicationTest.cpp  AndroidManifest.xml  ApplicationTest.cpp  ApplicationTest.hpp  ApplicationTest.html  ApplicationTest.plist  CMakeLists.txt  ContextGLTest.cpp  ContextTest.cpp  EmscriptenApplicationTest.cpp  GlfwApplicationTest.cpp  IntegrationGLTest.cpp  IntegrationTest.cpp  Sdl2ApplicationTest.cpp  UserConfigTest.cpp  UserConfigTest.h  WidgetsGLTest.cpp  configure.h.cmake
src/Magnum/JoltIntegration/: CMakeLists.txt  DebugDraw.cpp  DebugDraw.h  Integration.h  visibility.h
src/Magnum/LibOvrIntegration/: CMakeLists.txt  Compositor.cpp  Compositor.h  Context.cpp  Context.h  Conversion.cpp  Conversion.h  Hmd.cpp  Hmd.h  HmdEnum.h  LibOvrIntegration.h  visibility.h
src/Magnum/LibOvrIntegration/Test/: CMakeLists.txt  ConversionTest.cpp
src/Magnum/OvrIntegration/: CMakeLists.txt  Compositor.cpp  Compositor.h  Context.cpp  Context.h  Conversion.cpp  Conversion.h  Enums.cpp  Enums.h  Hmd.cpp  Hmd.h  HmdEnum.cpp  HmdEnum.h  Integration.h  OvrIntegration.h  Session.cpp  Session.h  configure.h.cmake  visibility.h
src/Magnum/OvrIntegration/Test/: CMakeLists.txt  ConversionTest.cpp  EnumTest.cpp  EnumsTest.cpp  IntegrationTest.cpp
src/Magnum/Test/: CMakeLists.txt  VersionTest.cpp
src/Magnum/YogaIntegration/: CMakeLists.txt  Layouter.cpp  Layouter.h  YogaIntegration.h  checkYogaVersion.cpp  configure.h.cmake  configureInternal.h.cmake  visibility.h
src/Magnum/YogaIntegration/Test/: CMakeLists.txt  LayouterTest.cpp
src/MagnumExternal/: CMakeLists.txt
